--- a/templates/predict_logP.html
+++ b/templates/predict_logP.html
@@ -19,7 +19,7 @@ MRlogP
             <h5 class="card-title">Predict logP using MRlogP</h5>
             <p>Draw a molecule to the left or paste SMILES in the box bellow to predict logP using MRlogP.</p>
             <p>Link to publication will appear here once accepted.</p>
-        </div>
+            <p>Please note that MRlogP is optimised for druglike small molecule prediction. If your molecule is non-druglike, then assume prediction accuracy is deminished. A useful tool to evaluate small molecule druglikeness is available at <a href="http://www.swissadme.ch/">http://www.swissadme.ch/</a></p>        </div>
     </div>
 </div>
 <div class="cardcontainer v-flex wrapper">
